# Libmx

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: libmx.h
src/: mx_atoi.c  mx_binary_search.c  mx_bubble_sort.c  mx_bubblesort_list_asc.c  mx_bubblesort_list_des.c  mx_count_substr.c  mx_count_words.c  mx_del_extra_spaces.c  mx_file_to_str.c  mx_get_substr_index.c  mx_hex_to_nbr.c  mx_isspace.c  mx_itoa.c  mx_list_size.c  mx_memchr.c  mx_memcmp.c  mx_memmem.c  mx_memrchr.c  mx_nbr_to_hex.c  mx_pop_back.c  mx_pop_front.c  mx_print_strarr.c  mx_print_unicode.c  mx_printint.c  mx_push_back.c  mx_push_front.c  mx_quicksort.c  mx_read_line.c  mx_realloc.c  mx_replace_substr.c  mx_sort_list_bubble.c  mx_strcat.c  mx_strchr.c  mx_strcmp.c  mx_strdup.c  mx_strjoin.c  mx_strlen.c  mx_strncmp.c  mx_strncpy.c  mx_strndup.c  (+3 more)
